--- a/Modeler/example/style.css
+++ b/Modeler/example/style.css
@@ -489,3 +489,11 @@ body:not(.presentation-mode) .bts-notifications {
   background: #fff;
   z-index: 10;
 }
+
+#heatmap-container {
+  width: 100%;
+  height: 500px; /* ajusta según necesites */
+  background-color: #fff;
+  border: 1px solid #ccc;
+  overflow: hidden;
+}
